Fix HTML encoding issues in boutique.html

--- a/boutique.html
+++ b/boutique.html
@@ -11,7 +11,7 @@
         <div class="logo">Mon Shopping</div>
         <nav>
             <ul>
-                <li><a href="shooping.html">Accueil</a></li>
+                <li><a href="index.html">Accueil</a></li>
                 <li><a href="boutique.html">Boutique</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="panier.html">Panier (<span id="cart-count">0</span>)</a></li>
@@ -234,4 +234,5 @@
     </script>
     
 </body>
+
 
