Refactor panier.html structure and scripts

--- a/panier.html
+++ b/panier.html
@@ -12,7 +12,7 @@
         
         <nav>
             <ul>
-                <li><a href="shooping.html">Accueil</a></li>
+                <li><a href="index.html">Accueil</a></li>
                 <li><a href="boutique.html">Boutique</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <!--li><a href="#cart">Panier (<span id="cart-count">0</span>)</a></li-->
@@ -421,4 +421,5 @@
     </script>
 
 </body>
+
 </html>
