Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <button onclick="addToCart(1, 'Produit 1', 10)">Ajouter au panier</button>
             </div>
             <div class="product" data-id="2" data-name="Produit 2" data-price="20">
-                <img src="ph2.jpg" alt="Produit 2">
+                <img src="ph2(1).jpg" alt="Produit 2">
                 <h2>Produit 2</h2>
                 <p>Prix: 20€</p>
                 <button onclick="addToCart(2, 'Produit 2', 20)">Ajouter au panier</button>
@@ -236,6 +236,7 @@
 </body>
 
 </html>
+
 
 
 
