--- a/boutique.html
+++ b/boutique.html
@@ -23,14 +23,14 @@
 
     <section id="products" class="products">
         <div class="product" data-id="1" data-name="Produit 1" data-price="10">
-            <img src="images/ph1.jpg" alt="Produit 1" >
+            <img src="ph1.jpg" alt="Produit 1" >
             <h2>Produit 1</h2>
             <p>Prix: 10€</p>
             <button onclick="addToCart(1, 'Produit 1', 10)">Ajouter au panier</button>
             
         </div>
         <div class="product" data-id="2" data-name="Produit 2" data-price="20">
-            <img src="images/ph2.jpg" alt="Produit 1">
+            <img src="ph2(1).jpg" alt="Produit 1">
             <h2>Produit 2</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(2, 'Produit 2', 20)">Ajouter au panier</button>
@@ -234,5 +234,6 @@
     </script>
     
 </body>
+
 
 
