Fix HTML encoding issues in boutique.html

--- a/boutique.html
+++ b/boutique.html
@@ -30,133 +30,133 @@
             
         </div>
         <div class="product" data-id="2" data-name="Produit 2" data-price="20">
-            <img src="ph2(1).jpg" alt="Produit 1">
+            <img src="ph2.jpg" alt="Produit 1">
             <h2>Produit 2</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(2, 'Produit 2', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="3" data-name="Produit 2" data-price="20">
-            <img src="images/ph3.jpg" alt="Produit 1">
+            <img src="ph3.jpg" alt="Produit 1">
             <h2>Produit 3</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(2, 'Produit 2', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="3" data-name="Produit 2" data-price="20">
-            <img src="images/ph4.jpg" alt="Produit 1">
+            <img src="ph4.jpg" alt="Produit 1">
             <h2>Produit 4</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(2, 'Produit 2', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="5" data-name="Produit 5" data-price="20">
-            <img src="images/ph5.jpg" alt="Produit 5">
+            <img src="ph5.jpg" alt="Produit 5">
             <h2>Produit 5</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(5, 'Produit 5', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="6" data-name="Produit 6" data-price="20">
-            <img src="images/ph6.jpg" alt="Produit 6">
+            <img src="ph6.jpg" alt="Produit 6">
             <h2>Produit 6</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(6, 'Produit 6', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="7" data-name="Produit 7" data-price="20">
-            <img src="images/ph7.jpg" alt="Produit 7">
+            <img src="ph7.jpg" alt="Produit 7">
             <h2>Produit 7</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(7, 'Produit 7', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="8" data-name="Produit 8" data-price="20">
-            <img src="images/ph8.jpg" alt="Produit 8">
+            <img src="ph8.jpg" alt="Produit 8">
             <h2>Produit 8</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(8, 'Produit 8', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="9" data-name="Produit 9" data-price="20">
-            <img src="images/ph9.jpg" alt="Produit 1">
+            <img src="ph9.jpg" alt="Produit 1">
             <h2>Produit 9</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(9, 'Produit 9', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="5" data-name="Produit 10" data-price="20">
-            <img src="images/ph10.jpg" alt="Produit 10">
+            <img src="ph10.jpg" alt="Produit 10">
             <h2>Produit 10</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(10, 'Produit 10', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="11" data-name="Produit 11" data-price="20">
-            <img src="images/ph11.jpg" alt="Produit 11">
+            <img src="ph11.jpg" alt="Produit 11">
             <h2>Produit 11</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(11, 'Produit 11', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="12" data-name="Produit 12" data-price="20">
-            <img src="images/ph12.jpg" alt="Produit 12">
+            <img src="ph12.jpg" alt="Produit 12">
             <h2>Produit 12</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(12, 'Produit 12', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="13" data-name="Produit 13" data-price="20">
-            <img src="images/ph13.jpg" alt="Produit 13">
+            <img src="ph13.jpg" alt="Produit 13">
             <h2>Produit 13</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(13, 'Produit 13', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="14" data-name="Produit 14" data-price="20">
-            <img src="images/ph14.jpg" alt="Produit 14">
+            <img src="ph14.jpg" alt="Produit 14">
             <h2>Produit 14</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(14, 'Produit 14', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="15" data-name="Produit 15" data-price="20">
-            <img src="images/ph15.jpg" alt="Produit 15">
+            <img src="ph15.jpg" alt="Produit 15">
             <h2>Produit 15</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(15, 'Produit 15', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="16" data-name="Produit 16" data-price="20">
-            <img src="images/ph16.jpg" alt="Produit 16">
+            <img src="ph16.jpg" alt="Produit 16">
             <h2>Produit 16</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(16, 'Produit 16', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="17" data-name="Produit 17" data-price="20">
-            <img src="images/ph17.jpg" alt="Produit 17">
+            <img src="ph17.jpg" alt="Produit 17">
             <h2>Produit 17</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(17, 'Produit 17', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="18" data-name="Produit 18" data-price="20">
-            <img src="images/ph18.jpg" alt="Produit 18">
+            <img src="ph18.jpg" alt="Produit 18">
             <h2>Produit 18</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(18, 'Produit 18', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="19" data-name="Produit 19" data-price="20">
-            <img src="images/ph19.jpg" alt="Produit 19">
+            <img src="ph19.jpg" alt="Produit 19">
             <h2>Produit 19</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(19, 'Produit 19', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="20" data-name="Produit 20" data-price="20">
-            <img src="images/ph20.jpg" alt="Produit 20">
+            <img src="ph20.jpg" alt="Produit 20">
             <h2>Produit 20</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(20, 'Produit 20', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="21" data-name="Produit 21" data-price="20">
-            <img src="images/ph21.jpg" alt="Produit 21">
+            <img src="ph21.jpg" alt="Produit 21">
             <h2>Produit 21</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(21, 'Produit 21', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="22" data-name="Produit 22" data-price="20">
-            <img src="images/ph22.jpg" alt="Produit 22">
+            <img src="ph22.jpg" alt="Produit 22">
             <h2>Produit 22</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(22, 'Produit 22', 20)">Ajouter au panier</button>
         </div>
         <div class="product" data-id="23" data-name="Produit 23" data-price="20">
-            <img src="images/ph23.jpg" alt="Produit 23">
+            <img src="ph23.jpg" alt="Produit 23">
             <h2>Produit 23</h2>
             <p>Prix: 20€</p>
             <button onclick="addToCart(23, 'Produit 23', 20)">Ajouter au panier</button>
@@ -234,6 +234,7 @@
     </script>
     
 </body>
+
 
 
 
